Try to get it to build on Travis.

--- a/build.gradle
+++ b/build.gradle
@@ -9,14 +9,10 @@ repositories {
 }
 
 dependencies {
-    compileOnly 'org.projectlombok:lombok:1.16.16'
     compile 'org.slf4j:slf4j-api:1.7.21'
     
+    compile 'functionalj:functionalj-annotations:0.1.59.0'
     compile 'functionalj:functionalj-core:0.1.59.0'
-
+    
     testCompile 'junit:junit:4.12'
-}
-
-task wrapper(type: Wrapper) {
-    gradleVersion = '2.0'
 }
