--- a/.settings/org.eclipse.buildship.core.prefs
+++ b/.settings/org.eclipse.buildship.core.prefs
@@ -1,9 +1,15 @@
+auto.sync=false
 build.commands=org.eclipse.jdt.core.javabuilder
+build.scans.enabled=false
 connection.arguments=
+connection.gradle.distribution=GRADLE_DISTRIBUTION(WRAPPER)
 connection.java.home=null
 connection.jvm.arguments=
 connection.project.dir=
 derived.resources=.gradle,build
 eclipse.preferences.version=1
+gradle.user.home=
 natures=org.eclipse.jdt.core.javanature
+offline.mode=false
+override.workspace.settings=true
 project.path=\:
