--- a/.classpath
+++ b/.classpath
@@ -14,7 +14,7 @@
 	</classpathentry>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-10/"/>
 	<classpathentry kind="con" path="org.eclipse.buildship.core.gradleclasspathcontainer"/>
-	<classpathentry kind="src" path=".apt_generated">
+	<classpathentry kind="src" path="src/main/.apt_generated">
 		<attributes>
 			<attribute name="optional" value="true"/>
 		</attributes>
