Attempt to fix the UseFunctionalJGradle problem.

--- a/build.gradle
+++ b/build.gradle
@@ -19,8 +19,8 @@ sourceSets {
 dependencies {
     compile 'org.slf4j:slf4j-api:1.7.21'
     
-    compile             'io.functionalj:functionalj-all:0.2.1.0'
-    annotationProcessor 'io.functionalj:functionalj-types:0.2.1.0'
+    compile             'io.functionalj:functionalj-all:0.2.2-DEV.0'
+    annotationProcessor 'io.functionalj:functionalj-types:0.2.2-DEV.0'
     
     compileOnly         'org.projectlombok:lombok:1.18.8'
     annotationProcessor 'org.projectlombok:lombok:1.18.8'
@@ -29,8 +29,8 @@ dependencies {
     
     testCompile 'junit:junit:4.12'
     
-    testCompile             'io.functionalj:functionalj-types:0.2.1.0'
-    testAnnotationProcessor 'io.functionalj:functionalj-types:0.2.1.0'
+    testCompile             'io.functionalj:functionalj-types:0.2.2-DEV.0'
+    testAnnotationProcessor 'io.functionalj:functionalj-types:0.2.2-DEV.0'
     
     testCompile             'org.projectlombok:lombok:1.18.8'
     testAnnotationProcessor 'org.projectlombok:lombok:1.18.8'
