--- a/build.gradle
+++ b/build.gradle
@@ -1,7 +1,18 @@
-apply plugin: 'java'
-apply plugin: 'maven'
-apply plugin: 'eclipse'
-apply plugin: 'idea'
+plugins {
+    id 'java'
+    id 'eclipse'
+    id 'idea'
+}
+
+java {
+    toolchain {
+        languageVersion = JavaLanguageVersion.of(21)
+    }
+}
+
+tasks.withType(JavaCompile).configureEach {
+    options.release = 21
+}
 
 repositories {
     mavenLocal()
@@ -9,17 +20,15 @@ repositories {
 }
 
 dependencies {
-    compile             'io.functionalj:functionalj-all:0.5.5.0'
-    annotationProcessor 'io.functionalj:functionalj-types:0.5.5.0'
+    implementation      'io.functionalj:functionalj-all:1.0.19'
+    annotationProcessor 'io.functionalj:functionalj-types:1.0.19'
     
     // == Test ==
-    
-    testImplementation('org.junit.jupiter:junit-jupiter:5.7.1')
-    
-    testCompile             'io.functionalj:functionalj-all:0.5.5.0'
-    testAnnotationProcessor 'io.functionalj:functionalj-types:0.5.5.0'
+    testImplementation      'org.junit.jupiter:junit-jupiter:5.7.1'
+    testImplementation      'io.functionalj:functionalj-all:1.0.19'
+    testAnnotationProcessor 'io.functionalj:functionalj-types:1.0.19'
 }
 
-test {
+tasks.test {
     useJUnitPlatform()
 }
